--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </div>
             </div>
 
-            <div class="bottom-nav">
+            class="bottom-nav" style="position: fixed; bottom: 0; left: 0; width: 100%; height: 75px; background: rgba(5,5,5,0.95); border-top: 1px solid #222; display: flex; justify-content: space-around; align-items: center; padding-bottom: env(safe-area-inset-bottom); z-index: 9000; backdrop-filter: blur(10px);">
                 <div class="nav-item" id="nav-analyst" onclick="toggleGhostAI()" style="flex:1; text-align: center; color: var(--dim);">
                     <i data-lucide="cpu" style="width: 22px;"></i>
                     <div style="font-size: 8px; margin-top: 4px;">GHOST</div>
