--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <div style="font-size: 8px; margin-top: 4px;">SEARCH</div>
                 </div>
 
-                <div class="nav-item" onclick="window.location.href='index.html'" style="flex:1.2; text-align: center; transform: translateY(-10px);">
+                <div class="nav-item" onclick="nav('home')" style="flex:1.2; text-align: center; transform: translateY(-10px);">
                     <div style="background: var(--accent); width: 50px; height: 50px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto; box-shadow: 0 0 15px var(--accent); border: 3px solid #000;">
                         <i data-lucide="home" style="width: 28px; color: #000;"></i>
                     </div>
