--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     </div>
                 </div>
 
-                <div class="nav-item" id="nav-stats" onclick="setFilter('NOTE')" style="flex:1; text-align: center; color: var(--dim);"> 
+                <div class="nav-item" id="nav-stats" onclick="filterArchive()" style="flex:1; text-align: center; color: var(--dim);"> 
                     <i data-lucide="archive" style="width: 22px;"></i>
                     <div style="font-size: 8px; margin-top: 4px;">ARCHIVE</div>
                 </div>
