--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="value" id="widget-tasks">NO EVENTS</div>
       </div>
 
-        <div class="widget" onclick="nav('finance')"">
+        <div class="widget" onclick="nav('finance')">
             <i data-lucide="wallet"></i>
             <div class="label">ECON_SYNC</div>
             <div class="value">
@@ -92,7 +92,7 @@
             </div>
         </div>
 
-        <div class="widget" onclick="nav('reviews)">
+        <div class="widget" onclick="nav('reviews')">
             <i data-lucide="calendar"></i>
             <div class="label">REVIEWS</div>
             <div class="value" id="widget-tasks">NO REVIEWS</div>
