--- a/index.html
+++ b/index.html
@@ -591,28 +591,48 @@
   </div>
 
 
-  <div id="review-detail-modal" class="note-overlay" style="display:none; justify-content:center; align-items:center;">
-    <div id="review-detail-card" class="review-detail-card" style="border-left: 4px solid var(--accent); background: #0a0a0a; width: 90%; max-width: 400px; padding: 25px; border-radius: 8px;">
-        <div class="detail-header">
-            <div style="display: flex; justify-content: space-between; align-items: flex-start;">
-                <h2 id="detail-review-title" style="font-family:'Rajdhani'; color:var(--accent); margin:0; text-transform:uppercase;">TITOLO</h2>
-                <span id="detail-review-stars" style="color:#ffd700; font-size:18px;"></span>
+<div id="review-detail-modal" class="note-overlay" onclick="if(event.target === this) closeReviewDetail()">
+    <div id="review-detail-card" class="review-detail-card" onclick="event.stopPropagation()">
+        <div class="detail-main-row">
+            <div class="detail-text-side">
+                <h2 id="detail-review-title">TITOLO</h2>
+                <div id="detail-review-stars" style="color:#ffd700; font-size:22px; margin: 5px 0;"></div>
+                <div id="detail-review-meta" class="review-meta-detail"></div>
             </div>
-            <div id="detail-review-meta" style="font-size:10px; color:var(--dim); margin-top:5px; letter-spacing:1px;"></div>
+            <div id="detail-poster-large" class="detail-poster-large"></div>
         </div>
 
         <div style="margin-top:25px;">
-            <label style="font-size:9px; color:var(--accent); opacity:0.6; text-transform:uppercase;">Recensione integrale:</label>
-            <div id="detail-review-comment" style="font-size:14px; line-height:1.6; color:#eee; margin-top:10px; max-height:300px; overflow-y:auto;"></div>
+            <label style="font-size:9px; color:var(--accent); opacity:0.6;">LA MIA RECENSIONE</label>
+            <div id="detail-review-comment" style="margin-top:10px; font-size:15px; color:#ddd;"></div>
         </div>
 
-        <div style="margin-top:30px; display:flex; justify-content:space-between;">
+        <div class="detail-footer" style="margin-top:40px; display:flex; justify-content:space-between; align-items:center;">
             <button class="esc-btn" onclick="closeReviewDetail()">[ CHIUDI ]</button>
-            <i data-lucide="trash-2" onclick="deleteCurrentReview()" style="width:18px; color:var(--dim); cursor:pointer;"></i>
+            <span onclick="deleteReview()" style="opacity:0.3; font-size:10px;"><i data-lucide="trash-2"></i> ELIMINA</span>
         </div>
     </div>
 </div>
 
+<div id="review-entry-modal" class="note-overlay" style="display:none; justify-content:center; align-items:center;">
+    <div class="review-detail-card" style="border-left: 4px solid #fff; padding:25px;">
+        <h2 style="font-family:'Rajdhani'; color:#fff; margin-bottom:5px;">NEW_ENTRY</h2>
+        <p style="font-size:10px; color:var(--dim); margin-bottom:20px;">Scrivi titolo, voto (0-5) e commento. L'AI penserà al resto.</p>
+        
+        <textarea id="ai-review-input" placeholder="Es: Ho visto Marty Supreme, 4 stelle. Regia pazzesca..." 
+                  style="width:100%; height:150px; background:#111; border:1px solid #333; color:#fff; padding:15px; border-radius:8px; font-family:inherit;"></textarea>
+        
+        <div id="ai-process-status" style="display:none; margin-top:10px; font-size:11px; color:var(--accent);">
+            <span class="blink-dot"></span> ANALISI_NEURALE_IN_CORSO...
+        </div>
+
+        <div style="margin-top:20px; display:flex; justify-content:flex-end; gap:10px;">
+            <button class="esc-btn" onclick="closeReviewEntry()">ANNULLA</button>
+            <button id="btn-save-review" onclick="processReviewWithAI()" 
+                    style="background:var(--accent); color:#000; border:none; padding:10px 20px; border-radius:4px; font-weight:700;">PUBBLICA</button>
+        </div>
+    </div>
+</div>
   <!-- ============================================ -->
   <!-- WEBPUSHR & LUCIDE INIT -->
   <!-- ============================================ -->
