--- a/index.html
+++ b/index.html
@@ -618,21 +618,19 @@
 </div>
 
 <div id="review-entry-modal" class="note-overlay" style="display:none; justify-content:center; align-items:center;" onclick="if(event.target === this) closeReviewEntry()">
-  <div class="review-modal-container" style="height: auto !important; min-height: 250px;">
-    
-    <div class="review-modal-header">
-      <h1 style="color: var(--accent);">NEW_NEURAL_ENTRY</h1>
+  <div class="review-modal-container"> <div class="review-modal-header">
+      <h1 style="color: var(--accent);">NEW_ENTRY</h1>
       <div class="review-close-btn" onclick="closeReviewEntry()">ANNULLA [X]</div>
     </div>
 
     <div class="review-modal-body">
       <textarea id="ai-review-input" 
                 placeholder="Titolo, stelle, commento..." 
-                style="width:100%; height:100px; background:transparent; border:none; color:#fff; font-family:inherit; resize:none; outline:none; font-size:16px; padding:0;"></textarea>
+                style="width:100%; height:150px; background:transparent; border:none; color:#fff; font-family:inherit; resize:none; outline:none; font-size:16px; padding:0;"></textarea>
       
       <div style="margin-top: 20px; border-top: 1px solid #111; padding-top: 20px; display: flex; justify-content: flex-end;">
-        <div class="esc-btn" onclick="processReviewWithAI()" style="color: var(--accent); cursor: pointer; font-weight: bold; letter-spacing: 1px;">
-          [ PUBBLICA_ENTRY ]
+        <div class="esc-btn" onclick="processReviewWithAI()" style="color: var(--accent); cursor: pointer; font-weight: bold;">
+          [ PUBBLICA_NEURAL_LINK ]
         </div>
       </div>
     </div>
