--- a/index.html
+++ b/index.html
@@ -618,19 +618,29 @@
 </div>
 
 <div id="review-entry-modal" class="note-overlay" style="display:none; justify-content:center; align-items:center;" onclick="if(event.target === this) closeReviewEntry()">
-  <div class="review-modal-container"> <div class="review-modal-header">
-      <h1 style="color: var(--accent);">NEW_ENTRY</h1>
+  <div class="review-modal-container">
+    
+    <div class="review-modal-header">
+      <h1 style="color: var(--accent);">NEW_NEURAL_ENTRY</h1>
       <div class="review-close-btn" onclick="closeReviewEntry()">ANNULLA [X]</div>
     </div>
 
     <div class="review-modal-body">
-      <textarea id="ai-review-input" 
+      <div class="review-main-content">
+        <div class="review-poster-frame" style="display: flex; align-items: center; justify-content: center; background: #111; border: 1px dashed #333;">
+           <span style="font-size: 9px; color: #444; text-align: center;">AI_POSTER_SEARCH</span>
+        </div>
+        <div class="review-info-side" style="flex: 1;">
+           <label style="font-size: 9px; color: var(--accent); opacity: 0.6; display: block; margin-bottom: 5px;">INPUT_TESTUALE</label>
+           <textarea id="ai-review-input" 
                 placeholder="Titolo, stelle, commento..." 
-                style="width:100%; height:150px; background:transparent; border:none; color:#fff; font-family:inherit; resize:none; outline:none; font-size:16px; padding:0;"></textarea>
+                style="width:100%; height:140px; background:transparent; border:none; color:#fff; font-family:inherit; resize:none; outline:none; font-size:15px; line-height:1.5;"></textarea>
+        </div>
+      </div>
       
-      <div style="margin-top: 20px; border-top: 1px solid #111; padding-top: 20px; display: flex; justify-content: flex-end;">
-        <div class="esc-btn" onclick="processReviewWithAI()" style="color: var(--accent); cursor: pointer; font-weight: bold;">
-          [ PUBBLICA_NEURAL_LINK ]
+      <div style="border-top: 1px solid #1a1a1a; padding-top: 20px; display: flex; justify-content: flex-end;">
+        <div class="esc-btn" onclick="processReviewWithAI()" style="color: var(--accent); cursor: pointer; font-weight: bold; letter-spacing: 1px;">
+          [ AVVIA_SINCRONIZZAZIONE_NEURALE ]
         </div>
       </div>
     </div>
