--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
       </div>
       <div style="display: flex; align-items: center; gap: 12px;">
         <i data-lucide="clapperboard" class="brain-icon"></i>
-        <h1 style="margin: 0; font-family: 'Rajdhani'; font-size: 1.875rem; line-height: 1;">THEATER_LOG</h1>
+        <h1 style="margin: 0; font-family: 'Rajdhani'; font-size: 1.875rem; line-height: 1;">REVIEWS</h1>
       </div>
     </div>
     <div class="header-right">
