--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
     
     <div class="nav-item" id="nav-filter" onclick="cycleReviewFilter()" style="flex:1; text-align: center; color: var(--dim);">
         <i data-lucide="layers" style="width: 22px;"></i>
-        <div style="font-size: 8px; margin-top: 4px;">FILTER</div>
+        <div style="font-size: 8px; margin-top: 4px;">STATS</div>
     </div>
 
     <div class="nav-item" onclick="nav('home')" style="flex:1.2; text-align: center; transform: translateY(-10px);">
