--- a/index.html
+++ b/index.html
@@ -520,6 +520,9 @@
     <div style="text-align:center; opacity:0.3; padding:40px;">[ IN_ATTESA_DI_MEDIA ]</div>
   </div>
 
+  <div id="reviews-stats-container" style="display:none; padding: 20px; overflow-y: auto; height: calc(100vh - 150px); background: #050505;">
+  </div>
+
   <div class="bottom-nav" style="position: fixed; bottom: 0; left: 0; width: 100%; height: 75px; background: rgba(5,5,5,0.95); border-top: 1px solid #222; display: flex; justify-content: space-around; align-items: center; padding-bottom: env(safe-area-inset-bottom); z-index: 9000; backdrop-filter: blur(10px);">
     
     <div class="nav-item" id="nav-critic" onclick="toggleCriticAI()" style="flex:1; text-align: center; color: var(--dim);">
@@ -527,7 +530,7 @@
         <div style="font-size: 8px; margin-top: 4px;">CRITIC</div>
     </div>
     
-    <div class="nav-item" id="nav-filter" onclick="cycleReviewFilter()" style="flex:1; text-align: center; color: var(--dim);">
+    <div class="nav-item" id="nav-stats" onclick="cycleReviewFilter()" style="flex:1; text-align: center; color: var(--dim);">
         <i data-lucide="layers" style="width: 22px;"></i>
         <div style="font-size: 8px; margin-top: 4px;">STATS</div>
     </div>
