--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
         <div style="font-size: 8px; margin-top: 4px;">CRITIC</div>
     </div>
     
-    <div class="nav-item" id="nav-stats" onclick="cycleReviewFilter()" style="flex:1; text-align: center; color: var(--dim);">
+    <div class="nav-item" id="nav-stats" onclick="toggleStats()" style="flex:1; text-align: center; color: var(--dim);">
         <i data-lucide="layers" style="width: 22px;"></i>
         <div style="font-size: 8px; margin-top: 4px;">STATS</div>
     </div>
