--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
     </div>
 
     <div class="nav-item" id="nav-wish" onclick="toggleWishlist()" style="flex:1; text-align: center; color: var(--dim);"> 
-        <i data-lucide="bookmark-plus" style="width: 22px;"></i>
+        <i data-lucide="bookmark" style="width: 22px;"></i>
         <div style="font-size: 8px; margin-top: 4px;">WISHLIST</div>
     </div>
 
