--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
     </div>
     
     <div class="nav-item" id="nav-stats" onclick="toggleStats()" style="flex:1; text-align: center; color: var(--dim);">
-        <i data-lucide="layers" style="width: 22px;"></i>
+        <i data-lucide="bar-chart-2" style="width: 22px;"></i>
         <div style="font-size: 8px; margin-top: 4px;">STATS</div>
     </div>
 
@@ -550,6 +550,9 @@
         <i data-lucide="plus-square" style="width: 22px;"></i>
         <div style="font-size: 8px; margin-top: 4px;">ENTRY</div>
     </div>
+  </div>
+
+  <div id="ai-side-bubble" class="side-bubble" style="display:none; position: fixed; right: 20px; bottom: 90px; width: 250px; background: rgba(10,10,10,0.95); border: 1px solid var(--accent); color: #fff; padding: 15px; border-radius: 4px; z-index: 10000; backdrop-filter: blur(10px); font-family: 'JetBrains Mono'; font-size: 11px; line-height: 1.4;">
   </div>
 </div>
 
