--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 
         <div class="widget" onclick="nav('reviews')">
-            <i data-lucide="calendar"></i>
+            <i data-lucide="videotape"></i>
             <div class="label">REVIEWS</div>
             <div class="value" id="widget-tasks">NO REVIEWS</div>
         </div>
@@ -507,7 +507,7 @@
         <span style="font-size: 10px; letter-spacing: 2px; color: var(--accent); font-weight: 700;">MEDIA_CRITIC // SYNC</span>
       </div>
       <div style="display: flex; align-items: center; gap: 12px;">
-        <i data-lucide="clapperboard" class="brain-icon"></i>
+        <i data-lucide="videotape" class="brain-icon"></i>
         <h1 style="margin: 0; font-family: 'Rajdhani'; font-size: 1.875rem; line-height: 1;">REVIEWS</h1>
       </div>
     </div>
