--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="widget" onclick="nav('braindump')">
         <i data-lucide="brain"></i>
         <div class="label">Brain</div>
-        <div class="value"><span id="widget-notes">0</span> RECORDS</div>
+        <div class="value"><span id="widget-notes">0</span> DUMPS</div>
       </div>
 
 
