--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="widget" onclick="nav('reviews')">
             <i data-lucide="videotape"></i>
             <div class="label">REVIEWS</div>
-            <div class="value"><span id="widget-review">--</span>NO REVIEWS</div>
+            <div class="value"><span id="widget-reviews">--</span> REVIEWS</div>
         </div>
         
     </div>
