--- a/index.html
+++ b/index.html
@@ -224,6 +224,10 @@
             <button onclick="synthesizeDaily()" class="cyber-btn" style="width:100%; margin-top: 10px; padding:15px; border:1px solid #fcee0a; color:#fcee0a; background: transparent; cursor: pointer; font-family: 'Rajdhani'; font-weight: bold; letter-spacing: 2px;">INITIALIZE_FLOW</button>
         </div>
 
+
+        <div id="calendar-month-zone" style="display:none; margin-top:20px;"></div>
+        <div id="add-event-zone" style="display:none; margin-top:20px;"></div>
+
         <div id="active-flow-zone" style="display:none; margin-top: 20px;">
             <div id="daily-timeline-content"></div>
             <button onclick="document.getElementById('active-flow-zone').style.display='none'; document.getElementById('neural-input-zone').style.display='block';" 
@@ -232,15 +236,15 @@
     </main>
 
     <div class="bottom-nav" style="position: fixed; bottom: 0; left: 0; width: 100%; height: 75px; background: rgba(5,5,5,0.95); border-top: 1px solid #222; display: flex; justify-content: space-around; align-items: center; padding-bottom: env(safe-area-inset-bottom); z-index: 9000; backdrop-filter: blur(10px);">
-        <div class="nav-item" onclick="synthesizeDaily()" style="flex:1; text-align: center; color: #fcee0a;">
-            <i data-lucide="cpu" style="width: 22px;"></i>
-            <div style="font-size: 8px; margin-top: 4px;">SYNTH</div>
-        </div>
+<div class="nav-item" onclick="switchAgendaView('synth')" style="flex:1; text-align:center; color:#fcee0a;">
+    <i data-lucide="cpu" style="width:22px;"></i>
+    <div style="font-size:8px; margin-top:4px;">SYNTH</div>
+</div>
         
-        <div class="nav-item" onclick="document.getElementById('calendar-real-zone').scrollIntoView({behavior:'smooth'})" style="flex:1; text-align: center; color: var(--dim);">
-            <i data-lucide="search" style="width: 22px;"></i>
-            <div style="font-size: 8px; margin-top: 4px;">CHRONO</div>
-        </div>
+<div class="nav-item" onclick="switchAgendaView('chrono')" style="flex:1; text-align:center; color:var(--dim);">
+    <i data-lucide="list" style="width:22px;"></i>
+    <div style="font-size:8px; margin-top:4px;">CHRONO</div>
+</div>
 
         <div class="nav-item" onclick="nav('home')" style="flex:1.2; text-align: center; transform: translateY(-10px);">
             <div style="background: var(--accent); width: 50px; height: 50px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto; box-shadow: 0 0 15px var(--accent); border: 3px solid #000;">
@@ -248,15 +252,15 @@
             </div>
         </div>
 
-        <div class="nav-item" onclick="loadAgendaHistory()" style="flex:1; text-align: center; color: var(--dim);"> 
-            <i data-lucide="archive" style="width: 22px;"></i>
-            <div style="font-size: 8px; margin-top: 4px;">HISTORY</div>
-        </div>
+<div class="nav-item" onclick="switchAgendaView('calendar')" style="flex:1; text-align:center; color:var(--dim);">
+    <i data-lucide="calendar" style="width:22px;"></i>
+    <div style="font-size:8px; margin-top:4px;">CALENDAR</div>
+</div>
 
-        <div class="nav-item" onclick="document.getElementById('neural-prompt').focus()" style="flex:1; text-align: center; color: var(--dim);">
-            <i data-lucide="plus-square" style="width: 22px;"></i>
-            <div style="font-size: 8px; margin-top: 4px;">ADD</div>
-        </div>
+<div class="nav-item" onclick="switchAgendaView('add')" style="flex:1; text-align:center; color:var(--dim);">
+    <i data-lucide="plus-square" style="width:22px;"></i>
+    <div style="font-size:8px; margin-top:4px;">ADD</div>
+</div>
     </div>
 </div>
   <!-- ============================================ -->
