--- a/index.html
+++ b/index.html
@@ -225,7 +225,9 @@
         </div>
 
 
-        <div id="calendar-month-zone" style="display:none; margin-top:20px;"></div>
+        <div id="calendar-month-zone" style="display:none; margin-top:20px;">
+             <div id="day-detail-zone"></div> <!-- ← AGGIUNGI QUESTA -->
+        </div>
         <div id="add-event-zone" style="display:none; margin-top:20px;"></div>
 
         <div id="active-flow-zone" style="display:none; margin-top: 20px;">
