--- a/index.html
+++ b/index.html
@@ -470,7 +470,8 @@
     </div>
 
     <!-- WEIGHT LOG MODAL -->
-    <div id="weight-log-modal" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: #0a0a0a; border: 2px solid #00d4ff; border-radius: 8px; padding: 25px; z-index: 10000; min-width: 300px;">
+<div id="weight-log-modal" style="display: none;">
+    <div style="background: #0a0a0a; border: 2px solid #00d4ff; border-radius: 8px; padding: 25px; max-width: 350px; width: 90%; position: relative;">
         <h3 style="font-family: 'Rajdhani'; font-size: 1.3rem; color: #00d4ff; margin: 0 0 15px 0;">LOG PESO</h3>
         
         <input type="number" id="weight-input" step="0.1" placeholder="es: 95.5"
@@ -487,7 +488,6 @@
             </button>
         </div>
     </div>
-
 </div>
 
   <!-- ============================================ -->
