--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="value"><span id="widget-habits">0</span> ACTIVE</div>
       </div>
 
-      <div class="widget" onclick="nav('health')">
+      <div class="widget" onclick="nav('body')">
         <i data-lucide="zap"></i>
         <div class="label">Body</div>
         <div class="value"><span id="widget-weight">--</span> KG</div>
