--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  
+  <style>
+.page {
+    display: none !important;
+}
+.page.active {
+    display: flex !important;
+    flex-direction: column;
+}
+</style>
   <title>System OS v1.5</title>
   
   <!-- External Scripts & Fonts -->
