--- a/index.html
+++ b/index.html
@@ -678,8 +678,7 @@
   <!-- PAGE: REVIEWS -->
   <!-- ============================================ -->
 
-<div id="reviews" class="page">
-  <div class="header">
+<div id="reviews" class="page" style="width: 100vw !important; height: 100vh !important; min-width: 100vw !important; min-height: 100vh !important;">  <div class="header">
     <div class="header-left">
       <div class="status-indicator">
         <span class="blink-dot"></span>
