--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
     <div class="grid">
       <div class="widget" onclick="nav('braindump')">
         <i data-lucide="brain"></i>
-        <div class="label">Brain</div>
+        <div class="label">Brain Dump</div>
         <div class="value"><span id="widget-notes">0</span> DUMPS</div>
       </div>
 
 
       <div class="widget" onclick="nav('finance')">
         <i data-lucide="wallet"></i>
-        <div class="label">ECON_SYNC</div>
+        <div class="label">CREDITS</div>
         <div class="value">
           <span id="widget-spent">0.00</span> €
           <span style="font-size: 10px; opacity: 0.4; margin-left: 5px;">SPENT_MONTH</span>
