--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
 <div class="search-container">
     <div>
         <i data-lucide="search" style="width: 14px; color: #444;"></i>
-        <input type="text" id="review-search" placeholder="SEARCH_DATABASE..." >
+        <input type="text" id="review-search" placeholder="SEARCH_DATABASE..."
                oninput="handleSearch(this.value)">
     </div>
 </div>
