--- a/index.html
+++ b/index.html
@@ -109,27 +109,21 @@
   <!-- PAGE: BRAIN DUMP -->
   <!-- ============================================ -->
   <div id="braindump" class="page">
-    <div class="header" style="flex-direction: column; align-items: stretch; height: auto; min-height: 80px; gap: 10px;">
-      <div class="status-indicator" style="display: flex; align-items: center; gap: 8px;">
-        <span class="blink-dot"></span>
-        <span style="font-size: 10px; letter-spacing: 2px; color: var(--accent); font-weight: 700;">NEURAL_SYNC // ACTIVE</span>
-      </div>
-      <div style="display: flex; justify-content: space-between; align-items: center; position: relative;">
-        <div style="display: flex; align-items: center; gap: 12px; flex: 1;">
-          <i data-lucide="brain" class="brain-icon" onclick="toggleSidebar()"></i>
-          <div class="title-zone" style="position: relative; flex: 1; display: flex; align-items: center;">
-            <h1 id="dump-title" style="margin: 0;">BRAIN_DUMP</h1>
-            <div id="search-wrapper" class="search-wrapper">
-              <input type="text" id="search-input" placeholder="Cerca nota..." oninput="handleSearch()">
-            </div>
-          </div>
+<div class="header">
+    <div class="header-left">
+        <div class="status-indicator">
+            <span class="blink-dot"></span>
+            <span>BRAIN_DUMP // SYNC</span>
         </div>
-        <div class="header-right" style="margin-top: 0;">
-          <i data-lucide="search" id="search-trigger" class="search-icon" onclick="toggleSearch(true)"></i>
-          <div class="esc-btn" onclick="nav('home')">[esc X]</div>
+        <div style="display: flex; align-items: center; gap: 12px;">
+            <i data-lucide="brain" class="brain-icon"></i>
+            <h1 style="margin: 0; font-family: 'Rajdhani'; font-size: 1.875rem;">BRAIN</h1>
         </div>
-      </div>
     </div>
+    <div class="header-right">
+        <div class="esc-btn" onclick="nav('home')">[esc X]</div>
+    </div>
+</div>
     <main>
       <input type="text" id="dump-input" placeholder="Prendi una nota..." onkeypress="sendCmd(event)">
       <div id="keep-grid"></div>
@@ -147,13 +141,35 @@
                 </div>
             </div>
 
+
+            <div id="brain-search-overlay" style="
+    position: fixed;
+    bottom: 75px;
+    left: 0;
+    right: 0;
+    background: #0a0a0a;
+    border-top: 1px solid var(--accent);
+    padding: 15px;
+    transform: translateY(100%);
+    transition: transform 0.3s ease;
+    z-index: 8000;
+    display: none;
+">
+    <div style="position: relative;">
+        <i data-lucide="search" style="position: absolute; left: 10px; top: 50%; transform: translateY(-50%); width: 14px; color: #444;"></i>
+        <input type="text" id="brain-search-input" placeholder="SEARCH_NOTES..." style="width: 100%;background: transparent;
+                border: 1px solid #333;padding: 10px 10px 10px 35px;color: var(--accent);font-family: 'JetBrains Mono';
+                font-size: 11px;outline: none;" oninput="filterNotes(this.value)"/>
+    </div>
+</div>
+
             <div class="bottom-nav" style="position: fixed; bottom: 0; left: 0; width: 100%; height: 75px; background: rgba(5,5,5,0.95); border-top: 1px solid #222; display: flex; justify-content: space-around; align-items: center; padding-bottom: env(safe-area-inset-bottom); z-index: 9000; backdrop-filter: blur(10px);">
                 <div class="nav-item" id="nav-analyst" onclick="toggleGhostAI()" style="flex:1; text-align: center; color: var(--dim);">
                     <i data-lucide="cpu" style="width: 22px;"></i>
                     <div style="font-size: 8px; margin-top: 4px;">GHOST</div>
                 </div>
                 
-                <div class="nav-item" id="nav-search" onclick="toggleSearch(true)" style="flex:1; text-align: center; color: var(--dim);">
+                <div class="nav-item" id="nav-search" onclick="toggleBrainSearch()" style="flex:1; text-align: center; color: var(--dim);">
                     <i data-lucide="search" style="width: 22px;"></i>
                     <div style="font-size: 8px; margin-top: 4px;">SEARCH</div>
                 </div>
