--- a/index.html
+++ b/index.html
@@ -142,21 +142,10 @@
             </div>
 
 
-            <div id="brain-search-overlay" style="
-    position: fixed;
-    bottom: 75px;
-    left: 0;
-    right: 0;
-    background: #0a0a0a;
-    border-top: 1px solid var(--accent);
-    padding: 15px;
-    transform: translateY(100%);
-    transition: transform 0.3s ease;
-    z-index: 8000;
-    display: none;
-">
+            <div id="brain-search-overlay" style="position: fixed;bottom: 75px;left: 0;right: 0;background: #0a0a0a;border-top: 1px solid var(--accent);
+    padding: 15px;transform: translateY(100%);transition: transform 0.3s ease;z-index: 8000;display: none;">
     <div style="position: relative;">
-        <i data-lucide="search" style="position: absolute; left: 10px; top: 50%; transform: translateY(-50%); width: 14px; color: #444;"></i>
+        <i data-lucide="search" style="position: absolute; left: 10px; top: 34%; transform: translateY(-50%); width: 14px; color: #444;"></i>
         <input type="text" id="brain-search-input" placeholder="SEARCH_NOTES..." style="width: 100%;background: transparent;
                 border: 1px solid #333;padding: 10px 10px 10px 35px;color: var(--accent);font-family: 'JetBrains Mono';
                 font-size: 11px;outline: none;" oninput="filterNotes(this.value)"/>
