--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <span>BRAIN_DUMP // SYNC</span>
         </div>
         <div style="display: flex; align-items: center; gap: 12px;">
-            <i data-lucide="brain" class="brain-icon"></i>
+            <i data-lucide="brain" class="brain-icon" onclick="toggleSidebar()"></i>
             <h1 style="margin: 0; font-family: 'Rajdhani'; font-size: 1.875rem;">BRAIN</h1>
         </div>
     </div>
