--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
         <div style="display: flex; align-items: center; gap: 12px;">
             <i data-lucide="brain" class="brain-icon" onclick="toggleSidebar()"></i>
-            <h1 style="margin: 0; font-family: 'Rajdhani'; font-size: 1.875rem;">BRAIN</h1>
+            <h1 style="margin: 0; font-family: 'Rajdhani'; font-size: 1.875rem;">BRAIN DUMP</h1>
         </div>
     </div>
     <div class="header-right">
