--- a/index.html
+++ b/index.html
@@ -991,7 +991,7 @@
     
     <div style="padding: 15px; border-top: 1px solid #333; display: flex; justify-content: flex-end; gap: 10px;">
         <button onclick="closeGhostModal()" style="background: transparent; color: #666; border: 1px solid #333; padding: 12px 20px; cursor: pointer; font-family: 'Rajdhani';">CANCEL</button>
-        <button id="ghost-save-btn" onclick="saveGhostNote()" disabled style="background: #666; color: #000; border: none; padding: 12px 30px; cursor: pointer; font-family: 'Rajdhani'; font-weight: bold; opacity: 0.5;">SALVA</button>
+        <button id="ghost-save-btn" onclick="saveGhostNote()" style="background: #666; color: #000; border: none; padding: 12px 30px; cursor: pointer; font-family: 'Rajdhani'; font-weight: bold; opacity: 0.5;">SALVA</button>
     </div>
 </div>
 
