--- a/index.html
+++ b/index.html
@@ -785,6 +785,9 @@
     </div>
     <div class="note-toolbar">
       <span class="tool-icon" onclick="confirmDelete(currentNoteData.id, currentNoteData.type)"><i class="fas fa-trash"></i></span>
+          <span class="tool-icon" onclick="toggleArchive()" title="Archivia">
+        <i class="fas fa-archive"></i>
+        </span>
       <div class="color-selector-container">
         <span class="tool-icon" onclick="toggleColorPicker()"><i class="fas fa-palette"></i></span>
         <div id="color-picker-bubble" class="color-bubble">
