--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
     <div class="nav-item nav-home" onclick="nav('home')">
         <div class="home-btn-circle">
-            <i data-lucide="home" style="width: 28px; color: #000;"></i>
+            <i data-lucide="home" style="width: 22px; color: var(--accent);"></i>
         </div>
     </div>
 
