--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
       <div id="keep-grid"></div>
     </main>
 
-            <div id="quick-menu" class="quick-menu-hidden" style="position: fixed; bottom: 85px; right: 15px; background: #050505; border: 1px solid #222; border-radius: 8px; z-index: 9001; padding: 5px;">
-                <div onclick="createNew('NOTE')" style="padding: 12px 20px; color: #fff; font-size: 11px; display: flex; align-items: center; gap: 10px; border-bottom: 1px solid #111;">
+            <div id="quick-menu" class="quick-menu-hidden">
+                <div onclick="createNew('NOTE')" >
                     <i data-lucide="sticky-note" style="width:14px"></i> NOTA
                 </div>
-                <div onclick="createNew('LISTA')" style="padding: 12px 20px; color: #fff; font-size: 11px; display: flex; align-items: center; gap: 10px; border-bottom: 1px solid #111;">
+                <div onclick="createNew('LISTA')">
                     <i data-lucide="list-checks" style="width:14px"></i> LISTA
                 </div>
-                <div onclick="createNew('LINK')" style="padding: 12px 20px; color: #fff; font-size: 11px; display: flex; align-items: center; gap: 10px;">
+                <div onclick="createNew('LINK')">
                     <i data-lucide="link" style="width:14px"></i> LINK
                 </div>
             </div>
