--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
     </main>
 
             <div id="quick-menu" class="quick-menu-hidden">
-                <div onclick="createNew('NOTE')" >
+                <div onclick="createNew('NOTE')" style="padding: 12px 20px; color: #fff; display: flex; align-items: center; gap: 10px; border-bottom: 1px solid #111;">
                     <i data-lucide="sticky-note" style="width:14px"></i> NOTA
                 </div>
-                <div onclick="createNew('LISTA')">
+                <div onclick="createNew('LISTA')" style="padding: 12px 20px; color: #fff; display: flex; align-items: center; gap: 10px; border-bottom: 1px solid #111;">
                     <i data-lucide="list-checks" style="width:14px"></i> LISTA
                 </div>
-                <div onclick="createNew('LINK')">
+                <div onclick="createNew('LINK')" style="padding: 12px 20px; color: #fff; display: flex; align-items: center; gap: 10px;">
                     <i data-lucide="link" style="width:14px"></i> LINK
                 </div>
             </div>
