--- a/index.html
+++ b/index.html
@@ -442,6 +442,10 @@
 
     </main>
 
+    <div id="body-coach-bubble" class="analyst-bubble-body" style="display:none; position:fixed; bottom:100px; right:20px; /* stesso stile di analyst-bubble */">
+    <div id="body-coach-text"></div>
+    </div>
+
     <!-- BOTTOM NAV -->
     <div class="bottom-nav">
         
